# 42-innercircle

./: README.md
00 libft/fts/atoi/: ft_atoi.c
00 libft/fts/isalnum/: a.out
00 libft/fts/isalpha/: a.out  (+1 more)
00 libft/libft/: ft_isascii.c  ft_lstmap.c  ft_memmove.c  ft_putnbr_fd.c  ft_strequ.c  ft_strncmp.c
00_libft/: Makefile  ft_lstiadd.c  ft_lstidel.c  ft_lstidelone.c  ft_lstimap.c  ft_putstr_fd.c  ft_strclr.c  ft_strcpy.c  ft_strjoin.c  ft_strlen.c  ft_strmapi.c  ft_strrejoin.c  readme
00_libft/libft/: Makefile  ft_free.c  ft_lstadd.c  ft_lstcnt.c  ft_lstdelone.c  ft_lstmap.c  ft_memset.c  ft_strsplit.c  ft_strsub.c  ft_tolower.c
01 gnl/: get_next_line.c  get_next_line.h  get_next_line.h.gch  gnl.c  main.c
01 gnl/libft/: ft_isprint.c  ft_lstfree.c  ft_lstifree.c  ft_lstimap.c  ft_lstinew.c  ft_ndcount.c  ft_putnbr.c  ft_strjoinfree.c  ft_strlcat.c  ft_strtrim.c  libft.h  readme
01_gnl/: a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  gnl.c  main.c  one_big_fat_line.txt  test
01_gnl/libft/: ft_putendl_fd.c  ft_strjoin.c  ft_strrejoin.c  ft_strsub.c  libft.h  readme
01_gnl_bu/: a.out  get_next_line.c  get_next_line.h  get_next_line.h.gch  gnl2.c  readme
01_gnl_bu/01_gnl/: get_next_line.c  get_next_line.h.gch  l
01_gnl_bu/01_gnl2/: get_next_line.c  get_next_line.h  tewt
01_gnl_bu/libft/: Makefile  ft_isalpha.c  ft_memccpy.c  ft_putchar.c  ft_putchar_fd.c  ft_putstr.c  ft_strchr.c  ft_strchri.c  ft_striter.c  ft_strjoin.c  ft_strjoinfree.c  ft_strnequ.c  ft_strnstr.c  ft_toupper.c  libft.h
021_fillit/: fillit
021_fillit/includes/: fillit.h
021_fillit/source/: main.c  map_creator.c  put_in.c  putin_clone.c  valhalla.c  validate.c
02_fillit/: Makefile  a.out  fgr_val_1.c  fgr_val_2.c  fillit.h  fillit.h.gch  good_fgrs.c  main.c  map_creator.c
02_fillit/gnl/: a.out  get_next_line.h.gch  main.c
03 init/network/: 02  03  05  07  08  09
03_init/network/: 01  02  03  04  05  06  07  08  09  11  12  13  14  15
03_init/scripts/: 01  02  03
03_init/system/: 01  02  03  04  05  06  07  08  09  10  11  12  13  15  16  17  18  19  21  22  23  24
bu_ok_sht/: fillit
bu_ok_sht/includes/: fillit.h
bu_ok_sht/source/: main.c  put_in.c  validate.c
f/: Makefile  fillit
f/includes/: fillit.h
f/source/: main.c  map_creator.c  put_in.c  valhalla.c  validate.c
fractol/: Makefile  fractol
fractol/includes/: fractol.h
fractol/libft/: Makefile
fractol/src/: main.c
ft_ls/: CMakeLists.txt  Makefile  ft_ls
ft_ls/inc/: ft_ls.h
ft_ls/lib/libft/: Makefile
ft_ls/lib/libft/src/: ft_lstadd_back.c  ft_lstdelones.c  ft_lstiiter.c  ft_memset.c  ft_strsplit.c
ft_ls/src/: check_file.c  colors.c  data.c  fill_tbl.c  free_all.c  ft_ls.c  ft_lstinsert.c  group_name.c  init_finf.c  links_count.c  lst_insert_new.c  main.c  name.c  owner_name.c  permission.c  print.c  size.c  type.c  utils.c
fts/isalnum/: ft_isalnum.c
fts/isascii/: a.out
fts/memset/: ft_memset.c
fts/strdup/: a.out  ft_strdup.c
fts/strncmp/: a.out  ft_strncmp.c
fts/strncpy/: a.out
fts/tolower/: ft_tolower.c
hui/: Makefile  fillit
hui/includes/: fillit.h
hui/source/: map_creator.c  put_in.c  putin_clone.c  valhalla.c  validate.c
libft/: Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_free.c  ft_freelst.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memccpy1.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_ndcount.c  ft_newcont.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  (+19 more)
(+65 files in other folders)
